[package]
name = "reexec"
version = "0.1.0"
edition = "2018"

description = "A library that makes it easy to re-execute the current process."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
repository = "https://github.com/cptpcrd/reexec-rs"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "errhandlingapi", "processthreadsapi", "winbase"] }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
